갤러리 조회기능 수정
